...
    <FrameLayout
        android:id="@+id/step_watcher_video_and_thumbnail_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/step_watcher_player_height">

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/step_watcher_player_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <ImageView
            android:id="@+id/step_watcher_thumbnail"
            android:layout_width="match_parent"
...
            android:scaleType="centerCrop"
            tools:src="@drawable/hourglass"/>

    </FrameLayout>

    <TextView
        android:id="@+id/step_watcher_short_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/step_watcher_short_description_testing"
        android:textSize="@dimen/step_watcher_short_description_text_size"
        android:layout_marginTop="12dp"
        android:layout_below="@id/step_watcher_video_and_thumbnail_container"
...
