...
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/recipe_details_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/recipe_details_margin_top"
                tools:text="@string/recipe_details_name_testing"
                android:textSize="@dimen/recipe_details_name_text_size"/>

...
                    tools:text="@string/recipe_details_ingredients_testing"
                    android:layout_gravity="center_horizontal"/>

            </ScrollView>

            <Button
                android:id="@+id/recipe_details_start_cooking_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_details_start_cooking_button_text"/>

        </LinearLayout>

...
