<?xml version="1.0" encoding="utf-8"?>
<!--The following code is the property and sole work of Mike Palarz, a student at Udacity.-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/step_selection_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>