<?xml version="1.0" encoding="utf-8"?>
<!--The following code is the property and sole work of Mike Palarz, a student at Udacity.-->
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipe_selection_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/recipe_list_item_layout_margin"
    card_view:cardCornerRadius="@dimen/recipe_list_item_card_corner_radius">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/recipe_list_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/default_recipe_name"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/recipe_list_item_name_text_size"/>

        <ImageView
            android:id="@+id/recipe_list_item_image"
            android:layout_width="@dimen/recipe_list_item_image_width"
            android:layout_height="@dimen/recipe_list_item_image_height"
            android:scaleType="centerCrop"
            android:layout_below="@id/recipe_list_item_name"
            android:layout_margin="@dimen/recipe_list_item_image_margin"
            android:layout_centerInParent="true"
            tools:src="@drawable/random_recipe1"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>